--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: node_js
 node_js:
   - "8"
 
-script:
-  - npm run lint
-  - npm test
+env:
+  - SUITE=npm test
+  - SUITE=npm run lint
+
+script: 
+  - bundle exec rspec $SUITE
+  - npx nsp check
+  
