--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: node_js
 node_js:
   - "8"
 
-env:
-  - SUITE=npm test
-  - SUITE=npm run lint
-
-script: 
-  - bundle exec rspec $SUITE
-  - npx nsp check
-  
+jobs:
+  include:
+    - stage: test and lint
+      script: npm run test
+      script: npm run lint
+    - stage: security
+      script: npx nsp check
