--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: node_js
-node_js:
+
+cache:
+  directories:
+  - node_modules # NPM packages
+
+  node_js:
   - "8"
 
 jobs:
   include:
     - stage: test and lint
-      script: npm run lint
-      script: npm run test
+      script:
+        - npm run lint
+        - npm run test
     - stage: security
       script: npx nsp check
