--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 
 cache:
   directories:
-  - node_modules # NPM packages
+  - ./node_modules # NPM packages
 
   node_js:
   - "8"
