--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,22 @@
 language: node_js
 
-cache:
-  directories:
-  - ./node_modules # NPM packages
-
-  node_js:
+node_js:
   - "8"
+
+# jobs:
+#   include:
+#     - stage: test and lint
+#       script:
+#         - npm run lint
+#         - npm run test
+#     - stage: security
+#       script: npx nsp check
 
 jobs:
   include:
-    - stage: test and lint
-      script:
-        - npm run lint
-        - npm run test
-    - stage: security
+    - stage: test
       script: npx nsp check
+    - # stage name not required, will continue to use `test`
+      script: npm run test
+    - stage: deploy
+      script: npm run lint
