--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,11 @@ language: node_js
 node_js:
   - "8"
 
-# jobs:
-#   include:
-#     - stage: test and lint
-#       script:
-#         - npm run lint
-#         - npm run test
-#     - stage: security
-#       script: npx nsp check
-
 jobs:
   include:
-    - stage: test
-      script: npx nsp check
-    - # stage name not required, will continue to use `test`
-      script: npm run test
-    - stage: deploy
+    - stage: test and lint
       script: npm run lint
+      - 
+        script: npm run test
+    - stage: security
+      script: npx nsp check
